# heap-memory-manager

./: .gitignore  CMakeLists.txt  README.md  main.c
libs/: CMakeLists.txt
libs/chunk/: CMakeLists.txt  chunk.c  chunk.h
libs/memory/: CMakeLists.txt  memory.c  memory.h
tests/: CMakeLists.txt  test1.c  test2.c  test3.c
